# software

./: .envrc  .gitignore  .project  CPCReady.yaml  NOTAS.txt  README.md  builde.sh  cc copia.sh  cc.sh  color.sh  con.sh  consola  consola copy.c  consola.buena.c  consola.c  consola1.c  console.sh  custom_shell  custom_shell.c  dev.env  dial.sh  emul.sh  make.sh  osscript.sh  pp.yaml  pyproject.toml  ruta_seleccionada.txt  tabla.sh
.devcontainer/: devcontainer.json
.github/workflows/: publish-release copy.yml  publish.yml
IDSK-PLUS/: .gitignore  GHANGELOG.md
IDSK-PLUS/.github/workflows/: release.yml
IDSK-PLUS/src/: Main.cpp
cpc/libexec/: help  use
cpc/src/: cpc-main.sh  cpc-use.sh
cpcready/: amsdos.py  common.py  disc.py  lcat.py  main.py  mode.py  model.py  new.py  save.py  variables.py
cpcready/resources/osx/: iDSK
prueba/: CPCReady.yml
prueba/src/: DISC.BAS
sdfa1_dfdf/: CPCReady
sdfa1_dfdf/src/: DISC.BAS
share/: CPCReady.j2  DISC.j2  RetroVirtualMachine.j2  settings.j2
tests/prueba/: CPCReady
tests/prueba/src/: DISC.BAS
