[tool.poetry]
name = "cpcready"
version = "0.1.0"
description = "Software para programar en basic desde visual studio code"
authors = ["david chivato de la fuente <destroyer.dcf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
prompt-toolkit = "^3.0.46"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
ruamel-yaml = "^0.18.6"

[tool.poetry.scripts]
CPCReady = "cpcready.main:main"
cpcready = "cpcready.main:main"
save     = "cpcready.main:save"
new      = "cpcready.main:new"
run      = "cpcready.main:run"
model    = "cpcready.main:model"
mode     = "cpcready.main:mode"
lcat     = "cpcready.main:lcat"
disc     = "cpcready.main:disc"
amsdos   = "cpcready.main:amsdos"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
